fix letter-spacing intro

--- a/css/styles.css
+++ b/css/styles.css
@@ -144,7 +144,7 @@ a {
     font-size: 14px;
     font-weight: 500;
     line-height: 16px;
-    letter-spacing: 10%;
+    letter-spacing: 1.6px;
     text-transform: uppercase;
 }
 
